force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationSpecialContract5__c.field-meta.xml
<CustomField>
    <fullName>MediationSpecialContract5__c</fullName>
    <label>斡旋特約5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>