force-app/main/default/objects/ServiceContractNewMatter__c/fields/MediationSpecialContract8__c.field-meta.xml
<CustomField>
    <fullName>MediationSpecialContract8__c</fullName>
    <label>斡旋特約8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>