force-app/main/default/objects/ServiceContractNewMatter__c/fields/NewCheckSheetCorrespondenceCategory__c.field-meta.xml
<CustomField>
    <fullName>NewCheckSheetCorrespondenceCategory__c</fullName>
    <label>新規チェックシート対応区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>