force-app/main/default/objects/ServiceContractNewMatter__c/fields/OtherCorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>OtherCorporateHousingRegulation__c</fullName>
    <label>その他の社宅規定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>