force-app/main/default/objects/ServiceContractNewMatter__c/fields/OtherImportantRegulation1__c.field-meta.xml
<CustomField>
    <fullName>OtherImportantRegulation1__c</fullName>
    <label>その他重要規定1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>