force-app/main/default/objects/ServiceContractNewMatter__c/fields/OwendCharges__c.field-meta.xml
<CustomField>
    <fullName>OwendCharges__c</fullName>
    <label>SNT手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>