force-app/main/default/objects/ServiceContractNewMatter__c/fields/RegistrationDifficultyMemo__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDifficultyMemo__c</fullName>
    <label>登録難易度メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>