force-app/main/default/objects/ServiceContractNewMatter__c/fields/RelocationShapeType__c.field-meta.xml
<CustomField>
    <fullName>RelocationShapeType__c</fullName>
    <label>赴任形態区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>