force-app/main/default/objects/ServiceContractNewMatter__c/fields/RenewalAdministrativeFeeBylawComment__c.field-meta.xml
<CustomField>
    <fullName>RenewalAdministrativeFeeBylawComment__c</fullName>
    <label>更新事務手内規コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>