force-app/main/default/objects/ServiceContractNewMatter__c/fields/RenewalAdministrativeFeeSymbol__c.field-meta.xml
<CustomField>
    <fullName>RenewalAdministrativeFeeSymbol__c</fullName>
    <label>更新事務手記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>