force-app/main/default/objects/ServiceContractNewMatter__c/fields/RenewalFeeSymbol__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeSymbol__c</fullName>
    <label>更新料記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>