force-app/main/default/objects/ServiceContractNewMatter__c/fields/RentBylawComment__c.field-meta.xml
<CustomField>
    <fullName>RentBylawComment__c</fullName>
    <label>家賃内規コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>