force-app/main/default/objects/ServiceContractNewMatter__c/fields/RentSymbol__c.field-meta.xml
<CustomField>
    <fullName>RentSymbol__c</fullName>
    <label>家賃記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>