force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoDl02__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoDl02__c</fullName>
    <label>kt_個人情報_DL02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>