force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoDl03__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoDl03__c</fullName>
    <label>kt_個人情報_DL03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>