force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoDl04__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoDl04__c</fullName>
    <label>kt_個人情報_DL04</label>
    <length>255</length>
    <type>Text</type>
</CustomField>