force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoNl02__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoNl02__c</fullName>
    <label>kt_個人情報_NL02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>