force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoNl03__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoNl03__c</fullName>
    <label>kt_個人情報_NL03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>