force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoNl04__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoNl04__c</fullName>
    <label>kt_個人情報_NL04</label>
    <length>255</length>
    <type>Text</type>
</CustomField>