force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoTd11__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoTd11__c</fullName>
    <label>kt_個人情報_TD11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>