force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoTd12__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoTd12__c</fullName>
    <label>kt_個人情報_TD12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>