force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoTd13__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoTd13__c</fullName>
    <label>kt_個人情報_TD13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>