force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoTl01__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoTl01__c</fullName>
    <label>kt_個人情報_TL01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>