force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoTl02__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoTl02__c</fullName>
    <label>kt_個人情報_TL02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>