force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfInfoTl03__c.field-meta.xml
<CustomField>
    <fullName>SelfInfoTl03__c</fullName>
    <label>kt_個人情報_TL03</label>
    <length>255</length>
    <type>Text</type>
</CustomField>