force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfPayContactContractTerms__c.field-meta.xml
<CustomField>
    <fullName>SelfPayContactContractTerms__c</fullName>
    <label>個人負担連絡_契約条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>