force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfPayContactDueDate__c.field-meta.xml
<CustomField>
    <fullName>SelfPayContactDueDate__c</fullName>
    <label>個人負担連絡_期日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>