force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfPayContactSubject__c.field-meta.xml
<CustomField>
    <fullName>SelfPayContactSubject__c</fullName>
    <label>個人負担連絡_件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>