force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfReasonsAnnouncementNote__c.field-meta.xml
<CustomField>
    <fullName>SelfReasonsAnnouncementNote__c</fullName>
    <label>アナウンス時注意事項自己都合</label>
    <length>255</length>
    <type>Text</type>
</CustomField>