force-app/main/default/objects/ServiceContractNewMatter__c/fields/SelfReasonsRequire__c.field-meta.xml
<CustomField>
    <fullName>SelfReasonsRequire__c</fullName>
    <label>自己都合都合要件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>