force-app/main/default/objects/ServiceContractNewMatter__c/fields/SNTCorrespondence__c.field-meta.xml
<CustomField>
    <fullName>SNTCorrespondence__c</fullName>
    <label>SNT対応時</label>
    <length>255</length>
    <type>Text</type>
</CustomField>