force-app/main/default/objects/ServiceContractNewMatter__c/fields/SpecialDocument__c.field-meta.xml
<CustomField>
    <fullName>SpecialDocument__c</fullName>
    <label>特殊書類名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>