force-app/main/default/objects/ServiceContractNewMatter__c/fields/SpecialMissionDestination__c.field-meta.xml
<CustomField>
    <fullName>SpecialMissionDestination__c</fullName>
    <label>特命先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>