force-app/main/default/objects/ServiceContractNewMatter__c/fields/SpecifyTraderNote2__c.field-meta.xml
<CustomField>
    <fullName>SpecifyTraderNote2__c</fullName>
    <label>指定業者備考2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>