force-app/main/default/objects/ServiceContractNewMatter__c/fields/SpecifyTraderNote__c.field-meta.xml
<CustomField>
    <fullName>SpecifyTraderNote__c</fullName>
    <label>指定業者備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>