force-app/main/default/objects/ServiceContractNewMatter__c/fields/SterilizationCost__c.field-meta.xml
<CustomField>
    <fullName>SterilizationCost__c</fullName>
    <label>消毒費</label>
    <length>255</length>
    <type>Text</type>
</CustomField>