force-app/main/default/objects/ServiceContractNewMatter__c/fields/StrictlyFields__c.field-meta.xml
<CustomField>
    <fullName>StrictlyFields__c</fullName>
    <label>絶対厳守項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>