force-app/main/default/objects/ServiceContractNewMatter__c/fields/StructureSymbol__c.field-meta.xml
<CustomField>
    <fullName>StructureSymbol__c</fullName>
    <label>構造記号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>