force-app/main/default/objects/ServiceContractNewMatter__c/fields/StructureTerms__c.field-meta.xml
<CustomField>
    <fullName>StructureTerms__c</fullName>
    <label>構造条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>