force-app/main/default/objects/ServiceContractNewMatter__c/fields/StructureTermsReceiveCall__c.field-meta.xml
<CustomField>
    <fullName>StructureTermsReceiveCall__c</fullName>
    <label>構造条件_受電</label>
    <length>255</length>
    <type>Text</type>
</CustomField>