force-app/main/default/objects/ServiceContractNewMatter__c/fields/SvCheckMatter__c.field-meta.xml
<CustomField>
    <fullName>SvCheckMatter__c</fullName>
    <label>SVチェック事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>