force-app/main/default/objects/ServiceContractNewMatter__c/fields/TermsCancelMonthRent__c.field-meta.xml
<CustomField>
    <fullName>TermsCancelMonthRent__c</fullName>
    <label>条件_解約月賃料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>