force-app/main/default/objects/ServiceContractNewMatter__c/fields/TermsIsPossibleFixedLeaseReContract__c.field-meta.xml
<CustomField>
    <fullName>TermsIsPossibleFixedLeaseReContract__c</fullName>
    <label>条件_定借再契約可</label>
    <length>255</length>
    <type>Text</type>
</CustomField>