force-app/main/default/objects/ServiceContractNewMatter__c/fields/TermsOther2Fields__c.field-meta.xml
<CustomField>
    <fullName>TermsOther2Fields__c</fullName>
    <label>条件_その他2項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>