force-app/main/default/objects/ServiceContractNewMatter__c/fields/TermsURRealEstate__c.field-meta.xml
<CustomField>
    <fullName>TermsURRealEstate__c</fullName>
    <label>条件_UR物件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>