force-app/main/default/objects/ServiceContractNewMatter__c/fields/TokutokuNet__c.field-meta.xml
<CustomField>
    <fullName>TokutokuNet__c</fullName>
    <label>得々ネット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>