force-app/main/default/objects/ServiceContractNewMatter__c/fields/TokutokuServiceRule__c.field-meta.xml
<CustomField>
    <fullName>TokutokuServiceRule__c</fullName>
    <label>得々サービスルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>