force-app/main/default/objects/ServiceContractNewMatter__c/fields/ToSNTApplicationMethodGarage__c.field-meta.xml
<CustomField>
    <fullName>ToSNTApplicationMethodGarage__c</fullName>
    <label>SNTへの申請方法_駐車場</label>
    <length>255</length>
    <type>Text</type>
</CustomField>