force-app/main/default/objects/ServiceContractNewMatter__c/fields/TraderConfirmSendDocumentConfirmMatter2__c.field-meta.xml
<CustomField>
    <fullName>TraderConfirmSendDocumentConfirmMatter2__c</fullName>
    <label>締結戻しの業者確認送付書_確認事項2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>