force-app/main/default/objects/ServiceContractNewMatter__c/fields/TraderConfirmSendDocumentConfirmMatter3__c.field-meta.xml
<CustomField>
    <fullName>TraderConfirmSendDocumentConfirmMatter3__c</fullName>
    <label>締結戻しの業者確認送付書_確認事項3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>