force-app/main/default/objects/ServiceContractNewMatter__c/fields/TraderConfirmSendDocumentConfirmMatter4__c.field-meta.xml
<CustomField>
    <fullName>TraderConfirmSendDocumentConfirmMatter4__c</fullName>
    <label>締結戻しの業者確認送付書_確認事項4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>