force-app/main/default/objects/ServiceContractNewMatter__c/fields/TraderConfirmSendDocumentReplyContent2__c.field-meta.xml
<CustomField>
    <fullName>TraderConfirmSendDocumentReplyContent2__c</fullName>
    <label>締結戻しの業者確認送付書_回答内容2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>