force-app/main/default/objects/ServiceContractNewMatter__c/fields/TraderContactNote__c.field-meta.xml
<CustomField>
    <fullName>TraderContactNote__c</fullName>
    <label>業者連絡注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>