force-app/main/default/objects/ServiceContractNewMatter__c/fields/TraderUsePhone__c.field-meta.xml
<CustomField>
    <fullName>TraderUsePhone__c</fullName>
    <label>業者用TEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>